added the topics section created from json

--- a/userprofile.html
+++ b/userprofile.html
@@ -98,60 +98,109 @@
 						Followed Topics
 					</div>
 				</div>
-				<div class="row topicsinfo" >
+				<div class="row topicsinfo1" >
 					<div class="col-xs-2">
+						<div>
 						<img src="images/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
-
-						<h4></h4>
-						<span class="badge">30</span>
+						</div>
+						<div class="row">
+						<div class="col-xs-12 col-sm-8">
+						<span class="topic"></span>
+						</div>
+						<div class="col-xs-12 col-sm-4">
+						<span class="wins"></span>
+						</div>
+						</div>
+						<span class="badge"></span>
 
 
 					</div>
 
 					<div class="col-xs-2 ">
+						<div>
 						<img src="images/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
-						<h4>Computer Science</h4>
-						<span class="badge">30</span>
+						</div>
+						<div class="row">
+						<div class="col-xs-12 col-sm-8">
+						<span class="topic"></span>
+						</div>
+						<div class="col-sm-4 col-xs-12">
+						<span class="wins"></span>
+						</div>
+						</div>
+						<span class="badge"></span>
 
 
 					</div>
 					<div class="col-xs-2 ">
 
+						<div>
 						<img src="images/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
-
-						<h4>Computer Science</h4>
-						<span class="badge">30</span>
+						</div>
+						<div class="row">
+						<div class="col-xs-12 col-sm-8">
+						<span class="topic"></span>
+						</div>
+						<div class="col-sm-4 col-xs-12">
+						<span class="wins"></span>
+						</div>
+						</div>
+						<span class="badge"></span>
 
 
 					</div>
 					<div class="col-xs-2">
-
+						<div>
 						<img src="images/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
-
-						<h4>Computer Science</h4>
-						<h6>Level 30</h6>
+						</div>
+						<div class="row">
+			      <div class="col-xs-12 col-sm-8">
+						<span class="topic"></span>
+						</div>
+						<div class="col-sm-4 col-xs-12">
+						<span class="wins "></span>
+						</div>
+						</div>
+						<span class="badge"></span>
 
 					</div>
 
 					<div class="col-xs-2">
 
+						<div>
 						<img src="images/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
+						</div>
+						<div class="row">
+						<div class="col-sm-8 col-xs-12">
+						<span class="topic"></span>
+						</div>
 
-						<h4>Computer Science</h4>
-						<h6>Level 30</h6>
-
+						<div class="col-sm-4 col-xs-12">
+							<span class="wins"></span>
+						</div>
+						</div>
+						<span class="badge"></span>
 
 					</div>
 					<div class="col-xs-2">
 
+						<div>
 						<img src="images/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
-
-						<h4>Computer Science</h4>
-						<h6>Level 30</h6>
-
+						</div>
+						<div class="row">
+						<div class="col-xs-12 col-sm-8">
+						<span class="topic"></span>
+						</div>
+						<div class="col-xs-12 col-sm-4">
+						<span class="wins"></span>
+						</div>
+						</div>
+						<span class="badge"></span>
 
 					</div>
-				</div>
+
+				</div> <!-- end topicinfo1 -->
+
 				<div class="row topicsinfo">
 					<div class="col-xs-2">
 						<img src="images/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
