--- a/userprofile.html
+++ b/userprofile.html
@@ -14,7 +14,7 @@
 	<link href="css/bootstrap-glyphicons.css" rel="stylesheet">
 
 	<!-- Custom CSS -->
-	<link href="css/mystyles.css" rel="stylesheet">
+	<link href="css/userprofilestyle.css" rel="stylesheet">
 
 	<!-- Include Modernizr in the head, before any other Javascript -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
@@ -43,7 +43,7 @@
 			<span id="age"></span>
 
 			<div id="badge">Gyaani</div>
-			<span id="flag"><img src="images/indiaflag.png" alt="user image" width="30px" height="30px" class="img-rounded">
+			<span id="flag"><img src="images/userProfileImages/indiaflag.png" alt="user image" width="30px" height="30px" class="img-rounded">
 			</span>
 			<span id="country">India</span>
 
@@ -75,19 +75,19 @@
 	</div>
 	<div class="row" id="GamesInfo">
 		<div class="col-xs-2 col-xs-offset-1" id="win">
-			<img src="images/win.png" alt="Wins" class="img-circle img-responsive" height="150px">
+			<img src="images/userProfileImages/win.png" alt="Wins" class="img-circle img-responsive" height="150px">
 
 			<p>Wins</br>
 				</p>
 			</div>
 			<div class="col-xs-2 col-xs-offset-2" id="loss">
-				<img src="images/win.png" alt="Wins" class="img-circle img-responsive" height="150px">
+				<img src="images/userProfileImages/win.png" alt="Wins" class="img-circle img-responsive" height="150px">
 
 				<p>Losses</br>
 					</p>
 				</div>
 				<div class="col-xs-2 col-xs-offset-2" id="winpercentage">
-					<img src="images/win.png" alt="Wins" class="img-circle img-responsive" height="150px">
+					<img src="images/userProfileImages/win.png" alt="Wins" class="img-circle img-responsive" height="150px">
 
 					<p>Win%<br>
 						</p>
@@ -101,7 +101,7 @@
 				<div class="row topicsinfo1" >
 					<div class="col-xs-2">
 						<div>
-						<img src="images/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
+						<img src="images/userProfileImages/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
 						</div>
 						<div class="row">
 						<div class="col-xs-12 col-sm-8">
@@ -118,7 +118,7 @@
 
 					<div class="col-xs-2 ">
 						<div>
-						<img src="images/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
+						<img src="images/userProfileImages/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
 						</div>
 						<div class="row">
 						<div class="col-xs-12 col-sm-8">
@@ -135,7 +135,7 @@
 					<div class="col-xs-2 ">
 
 						<div>
-						<img src="images/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
+						<img src="images/userProfileImages/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
 						</div>
 						<div class="row">
 						<div class="col-xs-12 col-sm-8">
@@ -151,7 +151,7 @@
 					</div>
 					<div class="col-xs-2">
 						<div>
-						<img src="images/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
+						<img src="images/userProfileImages/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
 						</div>
 						<div class="row">
 			      <div class="col-xs-12 col-sm-8">
@@ -168,7 +168,7 @@
 					<div class="col-xs-2">
 
 						<div>
-						<img src="images/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
+						<img src="images/userProfileImages/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
 						</div>
 						<div class="row">
 						<div class="col-sm-8 col-xs-12">
@@ -185,7 +185,7 @@
 					<div class="col-xs-2">
 
 						<div>
-						<img src="images/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
+						<img src="images/userProfileImages/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
 						</div>
 						<div class="row">
 						<div class="col-xs-12 col-sm-8">
@@ -203,14 +203,14 @@
 
 				<div class="row topicsinfo">
 					<div class="col-xs-2">
-						<img src="images/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
+						<img src="images/userProfileImages/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
 						<h4>Computer Science</h4>
 						<h6>Level 30</h6>
 
 					</div>
 					<div class="col-xs-2">
 
-						<img src="images/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
+						<img src="images/userProfileImages/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
 						<h4>Computer Science</h4>
 						<h6>Level 30</h6>
 					</div>
