--- a/userprofile.html
+++ b/userprofile.html
@@ -75,19 +75,19 @@
 	</div>
 	<div class="row" id="GamesInfo">
 		<div class="col-xs-2 col-xs-offset-1" id="win">
-			<img src="images/userProfileImages/win.png" alt="Wins" class="img-circle img-responsive" height="150px">
+			<img  class="img-circle img-responsive" height="150px">
 
 			<p>Wins</br>
 				</p>
 			</div>
 			<div class="col-xs-2 col-xs-offset-2" id="loss">
-				<img src="images/userProfileImages/win.png" alt="Wins" class="img-circle img-responsive" height="150px">
+				<img class="img-circle img-responsive" height="150px">
 
 				<p>Losses</br>
 					</p>
 				</div>
 				<div class="col-xs-2 col-xs-offset-2" id="winpercentage">
-					<img src="images/userProfileImages/win.png" alt="Wins" class="img-circle img-responsive" height="150px">
+					<img  class="img-circle img-responsive" height="150px">
 
 					<p>Win%<br>
 						</p>
@@ -101,7 +101,7 @@
 				<div class="row topicsinfo1" >
 					<div class="col-xs-2">
 						<div>
-						<img src="images/userProfileImages/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
+						<img  class="img-rounded img-responsive" height="150px">
 						</div>
 						<div class="row">
 						<div class="col-xs-12 col-sm-8">
@@ -118,7 +118,7 @@
 
 					<div class="col-xs-2 ">
 						<div>
-						<img src="images/userProfileImages/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
+						<img  class="img-rounded img-responsive" height="150px">
 						</div>
 						<div class="row">
 						<div class="col-xs-12 col-sm-8">
@@ -135,7 +135,7 @@
 					<div class="col-xs-2 ">
 
 						<div>
-						<img src="images/userProfileImages/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
+						<img  class="img-rounded img-responsive" height="150px">
 						</div>
 						<div class="row">
 						<div class="col-xs-12 col-sm-8">
@@ -151,7 +151,7 @@
 					</div>
 					<div class="col-xs-2">
 						<div>
-						<img src="images/userProfileImages/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
+						<img class="img-rounded img-responsive" height="150px">
 						</div>
 						<div class="row">
 			      <div class="col-xs-12 col-sm-8">
@@ -168,7 +168,7 @@
 					<div class="col-xs-2">
 
 						<div>
-						<img src="images/userProfileImages/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
+						<img  class="img-rounded img-responsive" height="150px">
 						</div>
 						<div class="row">
 						<div class="col-sm-8 col-xs-12">
@@ -185,7 +185,7 @@
 					<div class="col-xs-2">
 
 						<div>
-						<img src="images/userProfileImages/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
+						<img  class="img-rounded img-responsive" height="150px">
 						</div>
 						<div class="row">
 						<div class="col-xs-12 col-sm-8">
@@ -201,20 +201,104 @@
 
 				</div> <!-- end topicinfo1 -->
 
-				<div class="row topicsinfo">
+				<div class="row topicsinfo2">
 					<div class="col-xs-2">
-						<img src="images/userProfileImages/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
-						<h4>Computer Science</h4>
-						<h6>Level 30</h6>
+
+						<div>
+						<img  class="img-rounded img-responsive" height="150px">
+						</div>
+						<div class="row">
+						<div class="col-xs-12 col-sm-8">
+						<span class="topic"></span>
+						</div>
+						<div class="col-xs-12 col-sm-4">
+						<span class="wins"></span>
+						</div>
+						</div>
+						<span class="badge"></span>
 
 					</div>
 					<div class="col-xs-2">
 
-						<img src="images/userProfileImages/followers.jpeg" alt="Wins" class="img-rounded img-responsive" height="150px">
-						<h4>Computer Science</h4>
-						<h6>Level 30</h6>
+						<div>
+						<img class="img-rounded img-responsive" height="150px">
+						</div>
+						<div class="row">
+						<div class="col-xs-12 col-sm-8">
+						<span class="topic"></span>
+						</div>
+						<div class="col-xs-12 col-sm-4">
+						<span class="wins"></span>
+						</div>
+						</div>
+						<span class="badge"></span>
+
 					</div>
-				</div>
+					<div class="col-xs-2">
+
+						<div>
+						<img  class="img-rounded img-responsive" height="150px">
+						</div>
+						<div class="row">
+						<div class="col-xs-12 col-sm-8">
+						<span class="topic"></span>
+						</div>
+						<div class="col-xs-12 col-sm-4">
+						<span class="wins"></span>
+						</div>
+						</div>
+						<span class="badge"></span>
+
+					</div>
+					<div class="col-xs-2">
+
+						<div>
+						<img class="img-rounded img-responsive" height="150px">
+						</div>
+						<div class="row">
+						<div class="col-xs-12 col-sm-8">
+						<span class="topic"></span>
+						</div>
+						<div class="col-xs-12 col-sm-4">
+						<span class="wins"></span>
+						</div>
+						</div>
+						<span class="badge"></span>
+
+					</div>
+					<div class="col-xs-2">
+
+						<div>
+						<img  class="img-rounded img-responsive" height="150px">
+						</div>
+						<div class="row">
+						<div class="col-xs-12 col-sm-8">
+						<span class="topic"></span>
+						</div>
+						<div class="col-xs-12 col-sm-4">
+						<span class="wins"></span>
+						</div>
+						</div>
+						<span class="badge"></span>
+
+					</div>
+					<div class="col-xs-2">
+
+						<div>
+						<img  class="img-rounded img-responsive" height="150px">
+						</div>
+						<div class="row">
+						<div class="col-xs-12 col-sm-8">
+						<span class="topic"></span>
+						</div>
+						<div class="col-xs-12 col-sm-4">
+						<span class="wins"></span>
+						</div>
+						</div>
+						<span class="badge"></span>
+
+					</div>
+				</div>  <!--end topicsinfo2-->
 
 				<div class="row" id="button-height">
 					<div class="col-xs-4 btn1">
