--- a/userprofile.html
+++ b/userprofile.html
@@ -43,7 +43,7 @@
 			<span id="age"></span>
 
 			<div id="badge">Gyaani</div>
-			<span id="flag"><img src="images/userProfileImages/indiaflag.png" alt="user image" width="30px" height="30px" class="img-rounded">
+			<span id="flag"><img src="" alt="user image" width="30px" height="30px" class="img-rounded">
 			</span>
 			<span id="country">India</span>
 
@@ -75,19 +75,19 @@
 	</div>
 	<div class="row" id="GamesInfo">
 		<div class="col-xs-2 col-xs-offset-1" id="win">
-			<img  class="img-circle img-responsive" height="150px">
+			<img  src ="images/userProfileImages/win.png" class="img-circle img-responsive" height="150px">
 
 			<p>Wins</br>
 				</p>
 			</div>
 			<div class="col-xs-2 col-xs-offset-2" id="loss">
-				<img class="img-circle img-responsive" height="150px">
+				<img src ="images/userProfileImages/win.png" class="img-circle img-responsive" height="150px">
 
 				<p>Losses</br>
 					</p>
 				</div>
 				<div class="col-xs-2 col-xs-offset-2" id="winpercentage">
-					<img  class="img-circle img-responsive" height="150px">
+					<img  src ="images/userProfileImages/win.png" class="img-circle img-responsive" height="150px">
 
 					<p>Win%<br>
 						</p>
