minor changes in quizPlayer.html

--- a/quizPlayer.html
+++ b/quizPlayer.html
@@ -13,14 +13,14 @@
           <div class="row">
           <div class="col-sm-5 col-xs-5 pull-left myStatus">
             <h4 class="pull-left"><strong>#1</strong></h4>
-          <img src="images/akshayk.jpg" alt="" class="img-circle pull-left"/>
+          <img src="images/userProfileImages/akshayk.jpg" alt="" class="img-circle pull-left"/>
           <h5 class="score pull-left" id="top-score">0</h5>
           </div>
           <div id="timer" class="col-sm-2 col-xs-2 myStatus"></div>
 
           <div class="pull-right col-sm-5 col-xs-5 myStatus">
                 <h5 class="score pull-right" id="myScore">0</h5>
-              <img src="images/akshay.jpg" alt="" class="img-circle pull-right"/>
+              <img src="images/userProfileImages/akshay.jpg" alt="" class="img-circle pull-right"/>
               <h4 class="pull-right" id="myRank"><strong>#143</strong></h4>
           </div>
         </div>
