--- a/userprofile.html
+++ b/userprofile.html
@@ -101,7 +101,7 @@
 				<div class="row topicsinfo1" >
 					<div class="col-xs-2">
 						<div>
-						<img  class="img-rounded img-responsive" height="150px">
+						<a href="#"><img  class="img-rounded img-responsive" height="150px"></a>
 						</div>
 						<div class="row">
 						<div class="col-xs-12 col-sm-8">
@@ -118,7 +118,7 @@
 
 					<div class="col-xs-2 ">
 						<div>
-						<img  class="img-rounded img-responsive" height="150px">
+						<a href="#"><img  class="img-rounded img-responsive" height="150px"></a>
 						</div>
 						<div class="row">
 						<div class="col-xs-12 col-sm-8">
@@ -129,13 +129,10 @@
 						</div>
 						</div>
 						<span class="badge"></span>
-
-
 					</div>
 					<div class="col-xs-2 ">
-
 						<div>
-						<img  class="img-rounded img-responsive" height="150px">
+						<a href="#"><img  class="img-rounded img-responsive" height="150px"></a>
 						</div>
 						<div class="row">
 						<div class="col-xs-12 col-sm-8">
@@ -146,12 +143,11 @@
 						</div>
 						</div>
 						<span class="badge"></span>
-
-
 					</div>
+
 					<div class="col-xs-2">
 						<div>
-						<img class="img-rounded img-responsive" height="150px">
+						<a href="#"><img  class="img-rounded img-responsive" height="150px"></a>
 						</div>
 						<div class="row">
 			      <div class="col-xs-12 col-sm-8">
@@ -166,9 +162,8 @@
 					</div>
 
 					<div class="col-xs-2">
-
 						<div>
-						<img  class="img-rounded img-responsive" height="150px">
+						<a href="#"><img  class="img-rounded img-responsive" height="150px"></a>
 						</div>
 						<div class="row">
 						<div class="col-sm-8 col-xs-12">
@@ -183,9 +178,8 @@
 
 					</div>
 					<div class="col-xs-2">
-
 						<div>
-						<img  class="img-rounded img-responsive" height="150px">
+						<a href="#"><img  class="img-rounded img-responsive" height="150px"></a>
 						</div>
 						<div class="row">
 						<div class="col-xs-12 col-sm-8">
@@ -205,7 +199,52 @@
 					<div class="col-xs-2">
 
 						<div>
-						<img  class="img-rounded img-responsive" height="150px">
+						<a href="#"><img  class="img-rounded img-responsive" height="150px"></a>
+						</div>
+						<div class="row">
+						<div class="col-xs-12 col-sm-8">
+						<span class="topic"></span>
+						</div>
+						<div class="col-xs-12 col-sm-4">
+						<span class="wins"></span>
+						</div>
+						</div>
+						<span class="badge"></span>
+
+					</div>
+					<div class="col-xs-2">
+						<div>
+						<a href="#"><img  class="img-rounded img-responsive" height="150px"></a>
+						</div>
+						<div class="row">
+						<div class="col-xs-12 col-sm-8">
+						<span class="topic"></span>
+						</div>
+						<div class="col-xs-12 col-sm-4">
+						<span class="wins"></span>
+						</div>
+						</div>
+						<span class="badge"></span>
+
+					</div>
+					<div class="col-xs-2">
+						<div>
+						<a href="#"><img  class="img-rounded img-responsive" height="150px"></a>
+						</div>
+						<div class="row">
+						<div class="col-xs-12 col-sm-8">
+						<span class="topic"></span>
+						</div>
+						<div class="col-xs-12 col-sm-4">
+						<span class="wins"></span>
+						</div>
+						</div>
+						<span class="badge"></span>
+
+					</div>
+					<div class="col-xs-2">
+          	<div>
+						<a href="#"><img  class="img-rounded img-responsive" height="150px"></a>
 						</div>
 						<div class="row">
 						<div class="col-xs-12 col-sm-8">
@@ -221,7 +260,7 @@
 					<div class="col-xs-2">
 
 						<div>
-						<img class="img-rounded img-responsive" height="150px">
+						<a href="#"><img  class="img-rounded img-responsive" height="150px"></a>
 						</div>
 						<div class="row">
 						<div class="col-xs-12 col-sm-8">
@@ -237,55 +276,7 @@
 					<div class="col-xs-2">
 
 						<div>
-						<img  class="img-rounded img-responsive" height="150px">
-						</div>
-						<div class="row">
-						<div class="col-xs-12 col-sm-8">
-						<span class="topic"></span>
-						</div>
-						<div class="col-xs-12 col-sm-4">
-						<span class="wins"></span>
-						</div>
-						</div>
-						<span class="badge"></span>
-
-					</div>
-					<div class="col-xs-2">
-
-						<div>
-						<img class="img-rounded img-responsive" height="150px">
-						</div>
-						<div class="row">
-						<div class="col-xs-12 col-sm-8">
-						<span class="topic"></span>
-						</div>
-						<div class="col-xs-12 col-sm-4">
-						<span class="wins"></span>
-						</div>
-						</div>
-						<span class="badge"></span>
-
-					</div>
-					<div class="col-xs-2">
-
-						<div>
-						<img  class="img-rounded img-responsive" height="150px">
-						</div>
-						<div class="row">
-						<div class="col-xs-12 col-sm-8">
-						<span class="topic"></span>
-						</div>
-						<div class="col-xs-12 col-sm-4">
-						<span class="wins"></span>
-						</div>
-						</div>
-						<span class="badge"></span>
-
-					</div>
-					<div class="col-xs-2">
-
-						<div>
-						<img  class="img-rounded img-responsive" height="150px">
+						<a href="#"><img  class="img-rounded img-responsive" height="150px"></a>
 						</div>
 						<div class="row">
 						<div class="col-xs-12 col-sm-8">
