--- a/userprofile.html
+++ b/userprofile.html
@@ -285,7 +285,7 @@
 					<div class="col-xs-2">
 
 						<div>
-						<img  class="img-rounded img-responsive" height="150px">
+						<a><img  class="img-rounded img-responsive" height="150px"></a>
 						</div>
 						<div class="row">
 						<div class="col-xs-12 col-sm-8">
