leaderboard-js file

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -29,52 +29,52 @@
       </div>
 
       <div class="row players" >
-          <div class="col-xs-3 col-sm-3 rank">1</div>
-          <div class="col-xs-3 col-sm-3 country">India</div>
-          <div class="col-xs-3 col-sm-3 score">998</div>
-          <div class="col-xs-3 col-sm-3 p_name">Morrison Boyd</div>
+          <div class="col-xs-3 col-sm-3 rank">0</div>
+          <div class="col-xs-3 col-sm-3 country">default</div>
+          <div class="col-xs-3 col-sm-3 score">000</div>
+          <div class="col-xs-3 col-sm-3 p_name">quiz player</div>
       </div>
 
       <div class="row players" >
-          <div class="col-xs-3 col-sm-3 rank">2</div>
-          <div class="col-xs-3 col-sm-3 country">USA</div>
-          <div class="col-xs-3 col-sm-3 score">889</div>
-          <div class="col-xs-3 col-sm-3 p_name">I L Finar</div>
+          <div class="col-xs-3 col-sm-3 rank">0</div>
+          <div class="col-xs-3 col-sm-3 country">default</div>
+          <div class="col-xs-3 col-sm-3 score">000</div>
+          <div class="col-xs-3 col-sm-3 p_name">quiz player</div>
       </div>
 
       <div class="row players">
-          <div class="col-xs-3 col-sm-3 rank">3</div>
-          <div class="col-xs-3 col-sm-3 country">Russia</div>
-          <div class="col-xs-3 col-sm-3 score">802</div>
-          <div class="col-xs-3 col-sm-3 p_name">Solomon Frylle</div>
+          <div class="col-xs-3 col-sm-3 rank">0</div>
+          <div class="col-xs-3 col-sm-3 country">default</div>
+          <div class="col-xs-3 col-sm-3 score">000</div>
+          <div class="col-xs-3 col-sm-3 p_name">quiz player</div>
       </div>
 
       <div class="row players">
-          <div class="col-xs-3 col-sm-3 rank">4</div>
-          <div class="col-xs-3 col-sm-3 country">Belgium</div>
-          <div class="col-xs-3 col-sm-3 score">775</div>
-          <div class="col-xs-3 col-sm-3 p_name">Cormen J</div>
+          <div class="col-xs-3 col-sm-3 rank">0</div>
+          <div class="col-xs-3 col-sm-3 country">default</div>
+          <div class="col-xs-3 col-sm-3 score">000</div>
+          <div class="col-xs-3 col-sm-3 p_name">quiz player</div>
       </div>
 
       <div class="row players">
-          <div class="col-xs-3 col-sm-3 rank">5</div>
-          <div class="col-xs-3 col-sm-3 country">Belarus</div>
-          <div class="col-xs-3 col-sm-3 score">656</div>
-          <div class="col-xs-3 col-sm-3 p_name">Bennett H</div>
+          <div class="col-xs-3 col-sm-3 rank">0</div>
+          <div class="col-xs-3 col-sm-3 country">default</div>
+          <div class="col-xs-3 col-sm-3 score">000</div>
+          <div class="col-xs-3 col-sm-3 p_name">quiz player</div>
       </div>
 
       <div class="row players">
-          <div class="col-xs-3 col-sm-3 rank">6</div>
-          <div class="col-xs-3 col-sm-3 country">Poland</div>
-          <div class="col-xs-3 col-sm-3 score">632</div>
-          <div class="col-xs-3 col-sm-3 p_name">Ronald Ross</div>
+          <div class="col-xs-3 col-sm-3 rank">0</div>
+          <div class="col-xs-3 col-sm-3 country">default</div>
+          <div class="col-xs-3 col-sm-3 score">000</div>
+          <div class="col-xs-3 col-sm-3 p_name">quiz player</div>
       </div>
       <br><br>
 
       <script src="js/bootstrap.min.js"></script>
       <!-- Custom JS -->
       <script src="js/jquery-2.1.4.js"></script>
-      <script src="js/category-js.js"></script>
+      <script src="js/leaderboard.js"></script>
     </div>
   </body>
 </html>
