--- a/topic-play.html
+++ b/topic-play.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Category</title>
+    <title>Topic</title>
     <!-- Mobile viewport optimized -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
@@ -17,6 +17,7 @@
 
      <div class="content">
 
+    <div class="topic-info">
      <div class="topic-name">
         <h2>Topic Name</h2>
      </div><!--end topic-name-->
@@ -25,6 +26,7 @@
        <h4>Topic Description in short</h4>
      </div><!--end topic-name-->
 
+  <hr>
   <div class="row topic-column">
 
     <div class="col-xs-6 topic-icon  ">
@@ -35,18 +37,7 @@
 
     <div class="col-xs-6 topic-user">
 
-        <div class="level row">
 
-          <div class="col-xs-8">
-              <h3>Level</h3>
-          </div>
-
-          <div class="col-xs-4">
-              <h3>8</h3>
-          </div>
-
-
-        </div><!--end level-->
 
       <div class="wins row">
 
@@ -54,7 +45,7 @@
               <h3>#Wins</h3>
           </div>
 
-          <div class="col-xs-4">
+          <div class="col-xs-4" id="numwins">
               <h3>20</h3>
           </div>
 
@@ -67,7 +58,7 @@
               <h3>#Losses</h3>
           </div>
 
-          <div class="col-xs-4">
+          <div class="col-xs-4" id="numloss">
               <h3>45</h3>
           </div>
 
@@ -76,18 +67,48 @@
 
     </div> <!--end topic-user-->
   </div><!--end row-->
+  <hr>
+  <div class=" container row level">
 
-  <div class=" row topic-column2">
+    <div class="progress">
+  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
+  aria-valuemin="0" aria-valuemax="100" id="level-bar" style="width:0%">
+    Level <span id="levelnum">2</span> <span id="levelperc">40</span>% Complete (success)
+  </div>
+</div>
 
-    <div class="col-xs-7 leaderboard">
+  </div>
+
+  <div class=" row container topic-column2">
+
+    <div class="col-xs-6 leaderboard">
+      <a href="">
         <div>
         <img src="images/userProfileImages/win.png" alt="">
         </div>
-        <span>LeaderBoards</span>
+        <label>LeaderBoards</label>
+      </a>
+    </div><!--end leaderboard-->
 
-    </div>
+    <div class="col-xs-6 followers">
+        <div class="col-xs-8 number-followers">
+            #Followers:
+        </div>
+        <div class="col-xs-4 follow">
+            <span>990</span>
+        </div>
+        <button class="btn-primary">Follow!!</button>
+
+    </div><!--end followers-->
 
   </div><!--end topic-column2-->
+  <hr>
+</div><!--end topic-info-->
+
+  <div class="play-button">
+    <div>
+  <button class="btn-success">Play ----></button>
+  </div>
 
 </div><!--end content-->
 
