Done editing for userprofile.js

--- a/userprofile.html
+++ b/userprofile.html
@@ -99,7 +99,7 @@
 							Followed Topics
 						</div>
 					</div>
-					<div class="row topicsinfo1" >
+					<div class="row topicsinfo" >
 						<div class="col-xs-2 topicholder">
 							<div>
 							<a href="#"><img  class="img-rounded img-responsive" height="150px"></a>
@@ -190,8 +190,8 @@
 							</div>
 							<span class="badge"></span>
 						</div>
-					</div> <!-- end topicinfo1 -->
-	          <div class="row topicsinfo2">
+					</div> <!-- end topicinfo row -->
+	          <div class="row topicsinfo">
 						<div class="col-xs-2 topicholder">
 							<div>
 							<a href="#"><img  class="img-rounded img-responsive" height="150px"></a>
@@ -281,8 +281,10 @@
 							<span class="badge"></span>
 
 						</div>
-					</div>  <!--end topicsinfo2-->
+					</div>  <!--end topicsinfo row-->
+					<div class="newrows">
 
+					</div>
 					<div>
 						<a><img  class="img-rounded img-responsive" height="150px"></a>
 
