end page done and progressbar included

--- a/quizSummary.html
+++ b/quizSummary.html
@@ -4,13 +4,62 @@
   <meta charset="UTF-8">
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' name='viewport' />
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/quizPlayer.css">
+  <link rel="stylesheet" href="css/quizSummary.css">
   <title><summary>summary</summary></title>
 </head>
 <body>
   <div class="container">
+    <div class="navbar">
+        <h2 class="result-text text-primary"><strong>Result Chart</strong></h2>
+    </div>
+      <div class="top-rankers">
+        <div class="list-group top-rankers-list-group">
+          <a href="#" class="list-group-item list-group-item-success">
+            <img src="images/userProfileImages/akshayk.jpg" alt="" class="img-square pull-right">
+            <h4 class="list-group-item-heading">First Person Full Name</h4>
+            <p class="list-group-item-text">correct answers:15</p>
+            <p class="list-group-item-text"> score:240</p>
+          </a>
+          <a href="#" class="list-group-item list-group-item-info">
+            <img src="images/userProfileImages/akshayk.jpg" alt="" class="img-square pull-right">
+            <h4 class="list-group-item-heading">First Person Full Name</h4>
+            <p class="list-group-item-text">correct answers:15</p>
+            <p class="list-group-item-text"> score:240</p>
+          </a>
+          <a href="#" class="list-group-item list-group-item-warning">
+            <img src="images/userProfileImages/akshayk.jpg" alt="" class="img-square pull-right">
+            <h4 class="list-group-item-heading">First Person Full Name</h4>
+            <p class="list-group-item-text">correct answers:15</p>
+            <p class="list-group-item-text"> score:240</p>
+          </a>
+      </div>
+      </div>
+      <div class="my-rank">
+        <div class="list-group my-rank-list-group">
+          <a href="#" class="list-group-item list-group-item-danger">
+            <img src="images/userProfileImages/akshayk.jpg" alt="" class="img-square pull-right">
+            <h4 class="list-group-item-heading">First Person Full Name</h4>
+            <p class="list-group-item-text">correct answers:15</p>
+            <p class="list-group-item-text"> score:240</p>
+          </a>
+      </div>
+      </div>
+      <div class="row" id="level-indicator">
+        <div class=" col-sm-12 col-xs-12" id="level-indicator-div">
+          <h4><strong>Lv 3</strong></h4>
+        </div>
+      </div>
     <div class="progress">
-        <div class="progress-bar progress-bar-info" id="myProgressBar" role="progressbar"></div>
+        <div class="progress-bar progress-bar-success progress-bar-striped" id="myProgressBar" role="progressbar"></div>
+        <div class="progress-bar progress-bar-warning progress-bar-striped" id="myProgressBar2" role="progressbar"></div>
+    </div>
+    <div class="row">
+      <div class="col-xs-6 col-sm-6 myPadding">
+        <a type="button" class="btn btn-large btn-success btn-block myPadding" id="correct-answers">Home</a>
+      </div>
+      <div class="col-xs-6 col-sm-6 myPadding">
+        <a type="button" class="btn btn-large btn-danger btn-block myPadding" id="incorrect-answers">Rematch</a>
+      </div>
     </div>
   </div>
 
